<resources>
    <string name="app_name">Test</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="edit_name">Escribe el nombre</string>
    <string name="edit_phone">Escribe el telefono</string>
    <string name="edit_location">Escribe la localizacion</string>
    <string name="edit_store">Escribe el nombre de la tienda</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="btn_save">Guardar</string>
</resources>
