<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <EditText
        android:id="@+id/edit_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_name"/>
    <EditText
        android:id="@+id/edit_store"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_store"/>
    <EditText
        android:id="@+id/edit_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_location"/>
    <EditText
        android:id="@+id/edit_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_phone"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:orientation="horizontal"
        android:gravity="bottom">

        <Button
            android:id="@+id/btn_cancel"
            android:text="@string/btn_cancel"
            android:layout_width="@dimen/no_size"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="cancel"
           />

        <Button
            android:id="@+id/btn_save"
            android:text="@string/btn_save"
            android:layout_width="@dimen/no_size"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:onClick="save"
           />

    </LinearLayout>

</LinearLayout>